<resources>
    <string name="app_name">ToDoList</string>
    <string name="search_bar_hint">Search notes</string>
    <string name="search_icon">Search icon</string>
    <string name="action_todolist">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="settings_notifications_reminder_time_title">Notifications reminder time</string>
    <string name="settings_notifications_reminder_time_details">How many minutes before task completion time should be displayed notification</string>
    <string name="show_done">Show done</string>
    <string name="add_note_icon">Add note icon</string>
    <string name="state">Done</string>
    <string name="note_title_hint">Title</string>
    <string name="note_description_hint">Description</string>
    <string name="note_attachments_hint">Add attachments</string>
    <string name="save_note_icon">Save note icon</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="category_none">None</string>
    <string name="time">Set time</string>
    <string name="notifications">Notifications</string>
    <string name="settings_category_title">Categories</string>
    <string name="settings_category_details">Manage categories. Click on category on the list to remove it</string>
    <string name="settings_category_add">Add new</string>
    <string name="add_category_dialog_title">Add new category</string>
    <string name="add_category_dialog_input_hint">Category name</string>
    <string name="add_category_dialog_positive">Add</string>
    <string name="add_category_dialog_negative">Cancel</string>
    <string name="notification_channel_name">ToDo notifications</string>
    <string name="notification_channel_description">Notifications related to ToDo notes completion time, if you enabled them</string>
    <string name="close_icon">Close icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="save_file_icon">Save file icon</string>
    <string name="todo_state_icon">ToDo state icon</string>
    <string name="delete_category_dialog_title">Delete category</string>
    <string name="delete_category_dialog_message">Are you sure you want to delete %s category?</string>
    <string name="delete_category_dialog_positive">Delete</string>
    <string name="delete_category_dialog_negative">Cancel</string>
    <string name="attachment_size" translatable="false">(%s B)</string>
    <string name="todos_empty">Create new notes by tapping + button</string>
    <string name="delete_todo_dialog_title">Delete ToDo</string>
    <string name="delete_todo_dialog_message">Are you you want to delete ToDo?</string>
    <string name="delete_todo_dialog_positive">Delete</string>
    <string name="delete_todo_dialog_negative">Cancel</string>
</resources>
