<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.todoedit.ToDoEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_icon"
            android:src="@drawable/baseline_arrow_back_24">

        </ImageButton>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </View>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/baseline_delete_outline_24">

        </ImageButton>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/chip_background">

                <Spinner
                    android:id="@+id/category_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="30dp">

                </Spinner>
            </RelativeLayout>

            <com.google.android.material.chip.Chip
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/state"
                android:textColor="?colorOnSurface"
                app:chipMinTouchTargetSize="0dp">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/notifications_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:text="@string/notifications"
                android:textColor="?colorOnSurface"
                app:chipMinTouchTargetSize="0dp">

            </com.google.android.material.chip.Chip>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/chip_background">

                <Button
                    android:id="@+id/time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/time"
                    android:textColor="?colorOnSurface">

                </Button>
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_title_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="?colorOnSurfaceVariant"
                    android:textColorHint="?colorOnSurfaceVariant"
                    android:textSize="24sp">

                </EditText>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="top"
                    android:hint="@string/note_description_hint"
                    android:importantForAutofill="no"
                    android:inputType="text|textMultiLine"
                    android:textColor="?colorOnSurfaceVariant"
                    android:textColorHint="?colorOnSurfaceVariant">

                </EditText>

                <LinearLayout
                    android:id="@+id/attachments_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/chip_background">

                    <Button
                        android:id="@+id/attachments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/baseline_add_24"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/note_attachments_hint"
                        android:textColor="?colorOnSurface">

                    </Button>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_note_icon"
            android:src="@drawable/baseline_done_24_fab">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </FrameLayout>
</LinearLayout>
